# xml_kesmi_hsr

./: Cargo.toml  ShrekModel.xml  hsr_Sparkle.xml  hsr_test.xml  result.txt  result.xml  result_characters.txt  result_rules.txt  result_rules1.txt  test (2).csv  test.csv  test.xlsx
src/: main.rs
