[package]
name = "kesmi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
dict = "0.1.5"
roxmltree = "0.19.0"
uuid = {version = "1.7.0", features = ["v4"]}
xml-rs = "0.8.19"
xmlparser = "0.13.6"
xmltree = "0.10.3"
